<resources>
    <string name="app_name">MobileStefJan</string>
    <string name="action_settings">Settings</string>
    <string name="Saldo">(hier komt saldo)</string>

    <string name="foto">foto</string>

    <!-- Intro   -->
    <string name="title1">Welkom</string>
    <string name="title2">Beheer je in- en uitgaven</string>
    <string name="title3">Leen van vrienden</string>
    <string name="description1">Welkom op onze app! Dit is een budgeting app om al je financiële zaken in bij te houden.</string>
    <string name="description2">Hou al je transacties bij in deze app. Je kan zelf je saldo aanpassen door te betalen of door ontvangen!</string>
    <string name="description3">Je kan zelf vrienden toevoegen! Vanaf nu kan je geld lenen of uitlenen zonder dit te vergeten te vereffenen!</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="done">Done</string>

    <!-- login en registreren-->
    <string name="voornaam">voornaam</string>
    <string name="registreren">registreren</string>
    <string name="annuleren">annuleren</string>
    <string name="wachtwoord">wachtwoord</string>
    <string name="achternaam">achternaam</string>
    <string name="login">login</string>
    <string name="logo">logo</string>

    <!-- homescherm -->
    <string name="betalen">BETALEN</string>
    <string name="lenen">LENEN</string>
    <string name="ontvangen">INNEN</string>
    <string name="uitlenen">UITLENEN</string>

    <!-- friends fragment -->
    <string name="vriend_verwijderen">Vriend Verwijderen</string>
    <string name="vriend_toevoegen">Vriend toevoegen</string>
    <string name="wachtwoord_hint">wachtwoord_hint</string>

    <!-- history fragment -->
    <string name="transacties">TRANSACTIES</string>
    <string name="opslaan">opslaan</string>

    <!-- friends fragment -->
    <string name="vriend">vriend</string>
    <string name="achternaam_van_vriend">achternaam van vriend</string>
    <string name="voornaam_van_vriend">voornaam van vriend</string>

    <!-- lenen en uitlenen fragment -->
    <string name="kies_hier_wat_u_met_het_bedrag_wilt_doen">kies hier wat u met het bedrag wilt doen:</string>
    <string name="kalender_openen">Kalender openen</string>
    <string name="datum">datum</string>
    <string name="bedrag">bedrag</string>

    <!-- transactie fragment -->
    <string name="omschrijving">omschrijving</string>
    <string name="foto_nemen">foto nemen</string>
    <string name="ticket">ticket</string>
    <string name="ontvangentransactie">ontvangen</string>
    <string name="betalentransactie">betalen</string>
    <string name="fotobijbetaling">FotoBijBetaling</string>
    <string name="vrienden">VRIENDEN</string>

    <!-- fragment introvensters -->
    <string name="afbeelding_intro_1">afbeelding_intro_1</string>
    <string name="afbeelding_intro_2">afbeelding_intro_2</string>
    <string name="afbeelding_intro_3">afbeelding_intro_3</string>

</resources>
