<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Intro1Fragment"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/slide_three_img"
        android:contentDescription="@string/afbeelding_intro_3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title3"
        android:textSize="26sp"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        app:fontFamily="@font/lato_regular"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description3"
        android:textSize="18sp"
        android:layout_marginTop="30sp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        app:fontFamily="@font/lato_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TweedeBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="bottom|start"
            android:gravity="bottom|start"
            app:fontFamily="@font/lato_light" />

        <TextView
            android:id="@+id/DerdeNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/done"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:layout_gravity="bottom|end"
            android:gravity="bottom|end"
            android:clickable="true"
            android:focusable="true"
            app:fontFamily="@font/lato_bold"/>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>