<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/achtergrond"
    android:alpha="0.9">

    <ImageView
        android:id="@+id/imageView"
        android:paddingTop="90dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:src="@drawable/coins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtVoornaamBijRegistratie"
        android:textSize="20sp"
        android:paddingTop="5dp"
        android:gravity="center"
        android:background="#0B521B"
        android:layout_height="50dp"
        android:hint="@string/voornaam"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:fontFamily="@font/lato_regular"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/txtAchternaamBijRegistratie"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:paddingTop="5dp"
        android:gravity="center"
        android:background="#0B521B"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:hint="@string/achternaam"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:fontFamily="@font/lato_regular"
        app:layout_constraintTop_toBottomOf="@+id/txtVoornaamBijRegistratie"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/txtWachtwoordBijRegistratie"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:gravity="center"
        android:textSize="20sp"
        android:paddingTop="5dp"
        android:layout_height="50dp"
        android:background="#0B521B"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:hint="@string/wachtwoord"
        android:importantForAutofill="no"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:fontFamily="@font/lato_regular"
        app:layout_constraintTop_toBottomOf="@+id/txtAchternaamBijRegistratie"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/btnRegistratie"
        android:textSize="17sp"
        android:text="@string/registreren"
        android:layout_width="150dp"
        android:layout_height="60dp"
        app:fontFamily="@font/lato_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAnnulatie"
        app:layout_constraintTop_toBottomOf="@+id/txtWachtwoordBijRegistratie" />

    <Button
        android:id="@+id/btnAnnulatie"
        android:textSize="18sp"
        android:text="@string/annuleren"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        app:fontFamily="@font/lato_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWachtwoordBijRegistratie" />

</androidx.constraintlayout.widget.ConstraintLayout>