<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="100dp"
        android:autofillHints="@string/bedrag"
        android:text="@string/bedrag"
        android:textSize="25sp"
        app:fontFamily="@font/lato_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtBedrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/bedrag"
        android:inputType="number"
        app:fontFamily="@font/lato_regular"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/ddlVrienden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        app:fontFamily="@font/lato_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="224dp"
        android:layout_marginRight="224dp"
        android:text="@string/vriend"
        android:textSize="25sp"
        app:fontFamily="@font/lato_regular"
        app:layout_constraintEnd_toStartOf="@+id/ddlVrienden"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginBottom="248dp"
        android:text="@string/kies_hier_wat_u_met_het_bedrag_wilt_doen"
        android:textSize="20sp"
        app:fontFamily="@font/lato_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/radioLenen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/lenen"
            app:fontFamily="@font/lato_regular"/>

        <RadioButton
            android:id="@+id/radioUitlenen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uitlenen"
            app:fontFamily="@font/lato_regular"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnAnnuleren"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:textSize="18sp"
        android:text="@string/annuleren"
        app:fontFamily="@font/lato_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnOpslaanLening"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup" />

    <Button
        android:id="@+id/btnOpslaanLening"
        android:textSize="18sp"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/opslaan"
        app:fontFamily="@font/lato_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup" />

    <Button
        android:id="@+id/btnVriendToevoegenLenen"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="Voeg een vriend toe"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ddlVrienden" />

</androidx.constraintlayout.widget.ConstraintLayout>