<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/achtergrond"
    android:layout_height="match_parent"
    android:tag="">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:src="@drawable/coins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtlogAchternaam"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:hint="@string/achternaam"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="5dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:background="#0B521B"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/txtWachtwoord"
        android:textSize="20sp"
        android:hint="@string/wachtwoord"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="5dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:background="#0B521B"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/txtlogAchternaam"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/btnRegistreer"
        android:textSize="18sp"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/registreren"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/txtWachtwoord" />

    <Button
        android:id="@+id/btnLogin"
        android:textSize="18sp"
        android:text="@string/login"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWachtwoord" />
</androidx.constraintlayout.widget.ConstraintLayout>