<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        android:backgroundTint="#0C631E"
        app:layout_constraintBottom_toTopOf="@+id/listTransacties"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTransacties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="VRIENDEN"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
    </FrameLayout>

    <EditText
        android:id="@+id/txtAchternaamaam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints="@string/achternaam_van_vriend"
        android:ems="10"
        android:hint="@string/achternaam_van_vriend"
        android:inputType="textPersonName"
        app:fontFamily="@font/lato_regular"
        app:layout_constraintBottom_toTopOf="@+id/txtVoornaam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
        app:layout_constraintVertical_bias="0.325" />

    <EditText
        android:id="@+id/txtVoornaam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints="@string/voornaam_van_vriend"
        android:ems="10"
        android:hint="@string/voornaam_van_vriend"
        android:inputType="textPersonName"
        app:fontFamily="@font/lato_regular"
        app:layout_constraintBottom_toTopOf="@+id/VriendToevoegen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
        app:layout_constraintVertical_bias="0.599" />

    <Button
        android:id="@+id/VriendToevoegen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:onClick="VriendToevoegen"
        android:text="@string/vriend_toevoegen"
        app:fontFamily="@font/lato_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="380dp"
        android:layout_height="330dp"
        app:fontFamily="@font/lato_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/VriendToevoegen">

        <ListView
            android:id="@+id/listFriends"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>